<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cond_back"
    tools:context=".conditions">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="日期:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="196dp"
        android:layout_marginTop="8dp"
        android:text="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/temp_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/blood_pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView11" />

    <EditText
        android:id="@+id/temperatue_edittext"
        android:layout_width="71dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="188dp"
        android:ems="10"
        android:hint="@string/temp_edit"
        android:inputType="textPersonName|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_textview2" />

    <EditText
        android:id="@+id/bphigh_edittext"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/blood_high"
        android:inputType="textPersonName|number"
        app:layout_constraintEnd_toStartOf="@id/bplow_edittext"
        app:layout_constraintTop_toBottomOf="@id/temperatue_edittext" />

    <EditText
        android:id="@+id/bplow_edittext"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/blood_low"
        android:inputType="textPersonName|number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatue_edittext" />

    <MultiAutoCompleteTextView
        android:id="@+id/symptoms_edittext"
        android:layout_width="241dp"
        android:layout_height="128dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bplow_edittext" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="8dp"
        android:text="@string/symp_edit"
        app:layout_constraintBottom_toTopOf="@id/textView14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView12"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="43dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="228dp"
        android:text="@string/other_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/other_edittext"
        android:layout_width="219dp"
        android:layout_height="133dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/other_edit"
        android:inputType="text|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/symptoms_edittext" />

    <Button
        android:id="@+id/save1_button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/other_edittext" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="56dp"
        android:text="@string/clear_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/other_edittext" />

    <Button
        android:id="@+id/diagnosis_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="8dp"
        android:text="Diagnosis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save1_button"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_edittext"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>